fix(browser): add image stretch for safari mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -996,6 +996,10 @@ h4.success-msg {
   color: #35833f;
 }
 
+.social-share-row {
+  align-items: flex-start;
+}
+
 .social-share-image {
   border: 1px solid #58595b;
   margin: 0 auto;
